# Nyx

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.cursor/rules/: nyx-development.mdc
.github/workflows/: ci.yml
android/: AndroidManifest.xml
android/src/org/nyx/app/: NyxCallNotify.java
apps/common/: connect_via_hint.cpp  connect_via_hint.hpp  connection_label.cpp  connection_label.hpp  direct_chat_loop.cpp  direct_chat_loop.hpp
apps/nyx-app/: main.cpp  nyx-app.rc.in  resources.qrc
apps/nyx-app/appcore/: node_service.cpp  node_service.hpp  node_service_avatar.cpp  node_service_call.cpp  node_service_chat.cpp  node_service_connect.cpp  node_service_files.cpp  node_service_group.cpp  session_types.hpp
apps/nyx-app/i18n/: nyx_ru.ts
apps/nyx-app/qt/: android_platform.cpp  android_platform.hpp  call_audio_io.cpp  call_audio_io.hpp  call_frame_provider.cpp  call_frame_provider.hpp  call_video_io.cpp  call_video_io.hpp  chat_list_model.cpp  chat_list_model.hpp  file_list_model.cpp  file_list_model.hpp  lan_peer_model.cpp  lan_peer_model.hpp  message_model.cpp  message_model.hpp  node_controller.cpp  node_controller.hpp  win_chrome.cpp  win_chrome.hpp
apps/nyx-app/ui/: AccountGate.qml  Theme.qml  main.qml
apps/nyx-app/ui/components/: AvatarBadge.qml  ChatBubble.qml  ChatListItem.qml  CodeBlockView.qml  ComposerPreview.qml  DialogChrome.qml  EmojiPicker.qml  EmptyState.qml  FieldInfoPopup.qml  FileAccessAssignPopup.qml  FileListRow.qml  IconButton.qml  InviteCodeRow.qml  MarkdownToolbar.qml  MentionPopup.qml  NyxIcon.qml  NyxLogo.qml  PeerInfoPopup.qml  SpoilerSpan.qml  StatusBar.qml  TagChip.qml  TagEditor.qml  ToastHost.qml
apps/nyx-app/ui/controls/: NyxButton.qml  NyxButtonSecondary.qml  NyxCheckBox.qml  NyxComboBox.qml  NyxMenu.qml  NyxSegmentTabButton.qml  NyxTextField.qml
apps/nyx-app/ui/dialogs/: FieldInfoDialog.qml  GroupsDialog.qml  NetworkSettingsSection.qml  OnboardingDialog.qml  PeerInfoDialog.qml  SettingsDialog.qml
apps/nyx-app/ui/js/: MarkdownFormat.js
apps/nyx-app/ui/panels/: CallOverlay.qml  ChatListPanel.qml  ChatView.qml  ConnectionDrawer.qml  FilesPanel.qml  MainContentPanel.qml
apps/nyx-node/: chat_session.cpp  chat_session.hpp  cli.cpp  cli.hpp  cli_console.cpp  cli_console.hpp  group_session.cpp  group_session.hpp  main.cpp  node_session.cpp  node_session.hpp
apps/nyx-rendezvous/: main.cpp
apps/nyx-setup/: main.cpp  pack_installer.cpp  payload.cpp  payload.hpp  setup_util.cpp  setup_util.hpp
apps/nyx-setup-linux/: main.cpp  nyx-app-wrapper.sh  qt.conf  setup_util.cpp  setup_util.hpp
apps/nyx-uninstall/: main.cpp
apps/nyx-uninstall-linux/: main.cpp
cmake/: copy-installer-dlls.cmake  copy-installer-runtime.cmake  copy-qt-runtime-linux.cmake  detect-qt-mingw.cmake  fetch-qt-android.cmake  materialize-lib-symlinks.cmake  noise_dh_stubs.c  noise_mingw_compat.c  noise_mingw_compat.h  run-pack-installer.bat.in  run-pack-installer.sh.in
deploy/rendezvous/: Dockerfile
docs/: ADMIN.md  APPLICATION.md  ARCHITECTURE.md  BUILD_GUI_WINDOWS.md  CODEBASE.md  DEPLOY_RENDEZVOUS.md  GLOSSARY.md  GUI.md  PROTOCOL_EVOLUTION.md  README.md  ROADMAP.md  SECURITY_AUDIT.md  protocol.md
include/nyx/: account_store.hpp  app.hpp  avatar_proto.hpp  avatar_store.hpp  blob_store.hpp  call_av1.hpp  call_media.hpp  call_mesh.hpp  call_opus.hpp  call_proto.hpp  call_session.hpp  chat_id.hpp  chat_service.hpp  connection.hpp  console.hpp  conversation.hpp  crypto.hpp  file_access.hpp  file_hash.hpp  file_index.hpp  file_proto.hpp  file_transfer.hpp  group.hpp  group_hub.hpp  group_member.hpp  group_proto.hpp  identity.hpp  log.hpp  markdown_format.hpp  mdns.hpp  message_store.hpp  messaging.hpp  mux.hpp  nat.hpp  network_config.hpp  outbox.hpp  paths.hpp  profile_crypto.hpp  profile_meta.hpp  proto.hpp  (+8 more)
scripts/: build-android-apk.ps1  build-android-apk.sh  capture-android-crash.sh  deploy-rendezvous-linux.sh  package-win.ps1  pen-test-rendezvous.ps1
src/: account_store.cpp  app.cpp  avatar_proto.cpp  avatar_store.cpp  bip39_english.inc  blob_store.cpp  call_av1.cpp  call_media.cpp  call_mesh.cpp  call_opus.cpp  call_proto.cpp  call_session.cpp  chat_id.cpp  chat_service.cpp  connection.cpp  console.cpp  conversation.cpp  crypto.cpp  file_access.cpp  file_hash.cpp  file_index.cpp  file_proto.cpp  file_transfer.cpp  group.cpp  group_hub.cpp  group_member.cpp  group_proto.cpp  identity.cpp  log.cpp  markdown_format.cpp  mdns.cpp  message_store.cpp  messaging.cpp  mux.cpp  nat.cpp  network_config.cpp  outbox.cpp  paths.cpp  profile_crypto.cpp  profile_meta.cpp  (+9 more)
tests/: test_main.cpp  test_node_service.cpp
tools/: gen_bip39_inc.py
